# AlphaLogos

./: .Dockerfile.swp  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/workflows/: tests.yml
src/: main.cpp  routes.cpp  routes.h  server.cpp  server.h
src/handlers/: canonicals_handler.cpp  canonicals_handler.h  circuit_drawer_handler.cpp  circuit_drawer_handler.h  epi_handler.cpp  epi_handler.h  kmap_handler.cpp  kmap_handler.h  main_handler.cpp  main_handler.h  petrick_handler.cpp  petrick_handler.h  prime_implicants_handler.cpp  prime_implicants_handler.h  truth_table_handler.cpp  truth_table_handler.h  uncovered_minterms_handler.cpp  uncovered_minterms_handler.h  validation_handler.cpp  validation_handler.h
src/logic_utils/: PoS_validator.cpp  PoS_validator.h  SoP_validator.cpp  SoP_validator.h  canonical_forms.cpp  canonical_forms.h  circuit_drawer.cpp  circuit_drawer.h  maxterm.cpp  maxterm.h  minterm.cpp  minterm.h  token.cpp  token.h  truth_table.cpp  truth_table.h  truth_table_generator.cpp  truth_table_generator.h
src/qm/: README.md  essential_prime_implicants.cpp  essential_prime_implicants.h  implicant.cpp  implicant.h  kmap.cpp  kmap.h  petrick.cpp  petrick.h  prime_implicants.cpp  prime_implicants.h  uncovered_minterms.cpp  uncovered_minterms.h
src/web/static/css/: styles.css
src/web/static/js/: script.js
src/web/templates/: canonicals.html  essential_prime_implicants.html  index.html  petrick.html  prime_implicants.html  truth_table.html  uncovered_minterms.html
tests/: README.md  test_PoS_validator.cpp  test_SoP_validator.cpp  test_add.cpp  test_canonical_forms.cpp  test_circuit_drawer.cpp  test_essential_prime_implicants.cpp  test_kmap.cpp  test_petrick.cpp  test_prime_implicants.cpp  test_truth_table_generator.cpp  test_uncovered_minterms.cpp
